# SoundCloud-desktop-runtime

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  compat-check.yml  publish.yml
compat/: README.md  VERSIONS.json  apply-versions.mjs  check-latest-versions.mjs  generate-table.mjs  package.json  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.shims.json
compat/snippets/: react-native-core.tsx  reanimated.tsx  skia-primitives.tsx
crates/js-host/: Cargo.toml
crates/js-host/src/: async_bridge.rs  host.rs  image_cache.rs  lib.rs  scene.rs
crates/js-host/src/tests/: bundle_test.rs  fills_arbitrary_aspect_ratio_test.rs  hermes_engine_bug.rs  hit_test.rs  image_cache.rs  image_resize_mode.rs  live_data_test.rs  reanimated_test.rs  reorder.rs  screen_swap.rs  scroll.rs  smoke.rs  text_metrics.rs
crates/rn-linux/: Cargo.toml
crates/rn-linux/src/: lib.rs  main.rs
crates/rn-windows/: Cargo.toml
crates/rn-windows/src/: lib.rs  main.rs
crates/skia-desktop/: Cargo.toml
crates/skia-desktop/src/: gl_surface.rs  lib.rs
docs/: registry.md  usage.md  usage.ru.md
docs/pitfalls/: INDEX.md  cross-repo-workspace-split.md  gpu-surface-resize.md  hermes-engine-bugs.md  misc-gotchas.md  react-reconciler-integration.md  shim-style-plumbing-bugs.md  test-concurrency-flakes.md  windows-msvc-build.md  yoga-layout-gotchas.md
e2e/: Cargo.toml
e2e/tests/: auth_bridge.rs  real_ui_integration.rs
examples/soundcloud/: Cargo.toml
examples/soundcloud/crates/sc-desktop-example/: Cargo.toml
examples/soundcloud/crates/sc-desktop-example/src/: main.rs
examples/soundcloud/crates/sc-desktop-ops/: Cargo.toml
examples/soundcloud/crates/sc-desktop-ops/src/: dto_json.rs  lib.rs
examples/soundcloud/js/: build.mjs  package.json  tsconfig.json
examples/soundcloud/js/src/: index.tsx  live-data.ts
js/: build-support.mjs  build.mjs  package.json  tsconfig.json
js/playground/src/: index.tsx
js/src/: host-components.tsx  hostConfig.ts  index.ts  index.tsx  react-native.tsx  reanimated.tsx  rnskia.tsx
ops/cargo-registry/: config.json  fixup-ephemeral-urls.mjs  publish-crate.mjs  seed-live-index.mjs  serve-local.mjs
