[workspace]
resolver = "2"
members = ["crates/skia-desktop", "crates/rn-linux", "crates/rn-windows", "crates/js-host"]
# `examples/` and `e2e/` are each their OWN nested Cargo workspace (own
# `[workspace]` table, own Cargo.lock) — this root workspace's `members` list
# is already explicit (never a glob), so neither could be swept in by
# accident, but `exclude` documents the boundary unmistakably and future-
# proofs against `members` ever switching to a `crates/*`-style glob. This
# is THE mechanism that keeps `cargo build`/`cargo test` at the repo root
# 100% free of `sc-rn` (a genuinely separate git repo's crate) — see
# examples/soundcloud/Cargo.toml and e2e/Cargo.toml for where that
# cross-repo dependency actually lives.
exclude = ["examples", "e2e"]

[workspace.package]
edition = "2021"
license = "MIT"

[profile.release]
lto = true
