[package]
name = "js-host"
version = "0.1.0"
description = "Hermes + Yoga + Skia scene host for the Desktop-Runtime engine"
repository = "https://github.com/zxcloli666/SoundCloud-desktop-runtime"
edition.workspace = true
license.workspace = true

[dependencies]
ordered-float = "4"
reqwest = "0.13.4"
# Fork, not upstream: patches a genuine cmake-rs generator bug that blocks
# Windows builds (libhermes-sys passed "-G Ninja" as a raw configure_arg
# instead of Config::generator("Ninja"), so cmake-rs's MSVC branch still
# assumed a Visual Studio generator and appended -Thost=x64 -Ax64 alongside
# it) plus 4 more real build.rs bugs — see docs/pitfalls/windows-msvc-build.md.
# Published to our own registry (see docs/registry.md), not crates.io —
# upstream's own crates.io release is yanked, and cargo package/publish
# categorically refuses a version-less git dependency regardless of target
# registry, so this had to be resolved at the source, not worked around.
rusty_hermes = { version = "0.3.0", registry = "desktop-runtime" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
skia-safe = "0.99.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
yoga = "0.5.0"
