[package]
name = "js-host"
version = "0.1.2"
description = "Hermes + Yoga + Skia scene host for the Desktop-Runtime engine"
repository = "https://github.com/zxcloli666/SoundCloud-desktop-runtime"
edition.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22.1"
ordered-float = "4"
reqwest = "0.13.4"
# Fork, not upstream: patches 5 real build.rs bugs blocking Windows builds
# — see docs/pitfalls/windows-msvc-build.md. Published from the fork's OWN
# registry (github.com/zxcloli666/rusty_hermes), not this repo's — see
# docs/registry.md for why not crates.io/npm at all.
rusty_hermes = { version = "0.3.0", registry = "rusty-hermes-fork" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
skia-safe = "0.99.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
yoga = "0.5.0"
