[package]
name = "rn-windows"
version = "0.1.1"
description = "React Native runtime engine for Windows desktop — no Fabric, no webview"
repository = "https://github.com/zxcloli666/SoundCloud-desktop-runtime"
edition.workspace = true
license.workspace = true

[dependencies]
rn-linux = { version = "0.1.1", path = "../rn-linux", registry = "desktop-runtime" }
