[package]
name = "skia-desktop"
version = "0.1.2"
description = "GPU-backed Skia surface for desktop windows (winit + glutin)"
repository = "https://github.com/zxcloli666/SoundCloud-desktop-runtime"
edition.workspace = true
license.workspace = true

[dependencies]
gl = "0.14"
glutin = "0.32.3"
glutin-winit = "0.5.0"
raw-window-handle = "0.6.2"
skia-safe = { version = "0.99.0", features = ["gl"] }
winit = "0.30.13"
