[package]
name = "sc-desktop-example"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# Intra-repo, path deps into the engine — same repo, always cloned together.
js-host = { path = "../../../../crates/js-host" }
rn-linux = { path = "../../../../crates/rn-linux" }
sc-desktop-ops = { path = "../sc-desktop-ops" }
