[package]
name = "sc-desktop-ops"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# Intra-repo — same repo, always cloned together, so this relative path is
# safe and idiomatic (unlike `sc-rn` below, a genuinely different repo).
# Brings in `js_host::{Runtime, hermes_op, Result}` (re-exported from
# `rusty_hermes`) — deliberately NOT a direct `rusty_hermes` dependency of
# our own, so there is only ever one pinned/compiled copy of it in the whole
# repo tree, even though this crate lives in its own nested Cargo workspace.
js-host = { path = "../../../../crates/js-host" }
# Cross-repo sibling-checkout path dep — see examples/soundcloud/Cargo.toml's
# top comment for why, and Desktop-Runtime/CLAUDE.md for the full story.
sc-rn = { path = "../../../../../Core/shared/crates/sc-rn" }
serde_json = "1.0.150"
